@@ -34,6 +34,17 @@ import org.kiji.schema.shell.spi.ParserPluginFactory
 
 /**
  * Runtime environment in which DDL commands are executed.
+ *
+ * @param instanceURI of the Kiji instance commands executed under this environment will use.
+ * @param printer that commands executed under this environment will write output to.
+ * @param kijiSystem that commands executed under this environment will use to interact with Kiji.
+ * @param inputSource from which commands executed under this environment will read input.
+ * @param modules loaded under the environment.
+ * @param isInteractive is `true` if commands executed under this environment should be in
+ *     interactive mode, `false` if in batch mode.
+ * @param extensionMapping maps module names to custom data objects that extend the environment
+ *     with module-specific state.
+ * @param libJars that commands executed under this environment will have access to.
  */
 @ApiAudience.Framework
 @ApiStability.Evolving
@@ -45,14 +56,15 @@ final class Environment(
     val inputSource: InputSource = new JLineInputSource,
     val modules: List[ParserPluginFactory] = List(),
     val isInteractive: Boolean = false,
-    val extensionMapping: Map[String, Any] = Map()) {
+    val extensionMapping: Map[String, Any] = Map(),
+    val libJars: List[JarLocation] = List()) {
 
   /**
    * @return a new Environment with the instance name replaced with 'newInstance'.
    */
   def withInstance(newInstance: String): Environment = {
     return new Environment(KijiURI.newBuilder(instanceURI).withInstanceName(newInstance).build(),
-        printer, kijiSystem, inputSource, modules, isInteractive, extensionMapping)
+        printer, kijiSystem, inputSource, modules, isInteractive, extensionMapping, libJars)
   }
 
   /**
@@ -60,17 +72,17 @@ final class Environment(
    */
   def withPrinter(newPrinter: PrintStream): Environment = {
     return new Environment(instanceURI, newPrinter, kijiSystem, inputSource, modules,
-        isInteractive, extensionMapping)
+        isInteractive, extensionMapping, libJars)
   }
 
   /** @return a new Environment with the InputSource replaced with newSource. */
   def withInputSource(newSource: InputSource): Environment = {
     return new Environment(instanceURI, printer, kijiSystem, newSource, modules, isInteractive,
-        extensionMapping)
+        extensionMapping, libJars)
   }
 
   /**
-   * Return a new Environment with 'module' appended to the list of modules.
+   * Returns a new Environment with 'module' appended to the list of modules.
    * If the specified module is already on the list, the list is not changed.
    *
    * @param module the module to include.
@@ -84,12 +96,12 @@ final class Environment(
     } else {
       val newModules = modules :+ module // new list, with module appended to modules.
       return new Environment(instanceURI, printer, kijiSystem, inputSource,
-          newModules, isInteractive, extensionMapping)
+          newModules, isInteractive, extensionMapping, libJars)
     }
   }
 
   /**
-   * Return a new Environment with the interactivity flag set to the value of the argument
+   * Returns a new Environment with the interactivity flag set to the value of the argument
    * to this method.
    *
    * @param is true if this is run from an interactive terminal, false if from a script
@@ -98,11 +110,11 @@ final class Environment(
    */
   def withInteractiveFlag(interactiveFlag: Boolean): Environment = {
     return new Environment(instanceURI, printer, kijiSystem, inputSource, modules,
-        interactiveFlag, extensionMapping)
+        interactiveFlag, extensionMapping, libJars)
   }
 
   /**
-   * Return a new Environment with the extension state associated with a given plugin
+   * Returns a new Environment with the extension state associated with a given plugin
    * mapped to a new object. You should not call this method directly. Instead, in
    * your DDLCommand instance, call {@link DDLCommand#setExtensionState}.
    *
@@ -114,7 +126,25 @@ final class Environment(
   def updateExtension[T](plugin: EnvironmentPlugin[T], state: T): Environment = {
     val newMapping: Map[String, Any] = extensionMapping + (plugin.getName() -> state)
     return new Environment(instanceURI, printer, kijiSystem, inputSource, modules,
-        isInteractive, newMapping)
+        isInteractive, newMapping, libJars)
+  }
+
+  /**
+   * Returns a new environment with the specified jar location appended to the list of library
+   * jars used by commands executed under the environment. If the specified library jar is already
+   * in use, this environment is returned.
+   *
+   * @param newJar to include in the new environment.
+   * @return a new environment that uses the specified library jar, or this environment if the jar
+   *     was already in use.
+   */
+  def withLibJar(newJar: JarLocation): Environment = {
+    if (libJars.contains(newJar)) {
+      return this
+    } else {
+      return new Environment(instanceURI, printer, kijiSystem, inputSource, modules,
+          isInteractive, extensionMapping, libJars :+ newJar)
+    }
   }
 
   /**
